fix: scrollbar style

--- a/src/components/ComponentStyles/popup.sass
+++ b/src/components/ComponentStyles/popup.sass
@@ -144,7 +144,7 @@
 
     & .description-wrap
         scrollbar-width: auto
-        scrollbar-color: $px-theme $px-theme
+        scrollbar-color: $px-theme
 
     & .description-wrap:-webkit-scrollbar-track
         background: $px-theme
